@@ -237,7 +237,7 @@ mx_save_and_set_cursor(Tcl_Interp *interp,char *tkpath,char *cursor,Tcl_Obj *res
 		if (Tcl_VarEval(interp,tkpath," cget -cursor",NULL) != TCL_OK)
 			return;
 
-		old_cursor = Tcl_NewStringObj(interp->result,-1);
+		old_cursor = Tcl_NewStringObj(Tcl_GetStringResult(interp),-1);
 
 		if (Tcl_VarEval(interp,tkpath," configure -cursor ",cursor,NULL) != TCL_OK)
 			return;
@@ -1146,7 +1146,7 @@ Sn_setup_Init(Tcl_Interp *interp)		/* Interpreter for application. */
 	if (Tcl_Init(interp) == TCL_ERROR)
 	{
 #if !_WINDOWS
-		fprintf(stderr,"%s\n",interp->result);
+		fprintf(stderr,"%s\n",Tcl_GetStringResult(interp));
 #endif /* !_WINDOWS */
 
 		return TCL_ERROR;
@@ -1174,7 +1174,7 @@ Sn_setup_Init(Tcl_Interp *interp)		/* Interpreter for application. */
 	if (Tk_Init(interp) == TCL_ERROR)
 	{
 #if !_WINDOWS
-		fprintf(stderr,"%s\n",interp->result);
+		fprintf(stderr,"%s\n",Tcl_GetStringResult(interp));
 
 		exit(2);
 #else
@@ -1190,14 +1190,14 @@ Sn_setup_Init(Tcl_Interp *interp)		/* Interpreter for application. */
 	cmd_ret = Itcl_Init(interp);
 	if(cmd_ret != TCL_OK)
 	{
-		LOGGER((LOGFP,"Itcl Error: %s\n",interp->result));
+		LOGGER((LOGFP,"Itcl Error: %s\n",Tcl_GetStringResult(interp)));
 		return cmd_ret;
 	}
 
 	cmd_ret = Itk_Init(interp);
 	if(cmd_ret != TCL_OK)
 	{
-		LOGGER((LOGFP,"Itk Error: %s\n",interp->result));
+		LOGGER((LOGFP,"Itk Error: %s\n",Tcl_GetStringResult(interp)));
 		return cmd_ret;
 	}
 
@@ -1285,14 +1285,14 @@ Sn_setup_Init(Tcl_Interp *interp)		/* Interpreter for application. */
 	cmd_ret = Tcl_Eval(interp, initCmd);
 	if(cmd_ret != TCL_OK)
 	{
-		LOGGER((LOGFP,"sn_tcl_tk_init Error: %s\n",interp->result));
+		LOGGER((LOGFP,"sn_tcl_tk_init Error: %s\n",Tcl_GetStringResult(interp)));
 
 		if ((parg = (char *)Tcl_GetVar(interp,"errorInfo",TCL_GLOBAL_ONLY)))
 		{
 			LOGGER((LOGFP,"  errorInfo <%s>\n",parg));
 		}
 #if !_WINDOWS
-		fprintf(stderr,"Error: %s\n",interp->result);
+		fprintf(stderr,"Error: %s\n",Tcl_GetStringResult(interp));
 		exit(2);
 #endif /* !_WINDOWS */
 		return TCL_ERROR;
@@ -1339,7 +1339,7 @@ Sn_setup_Init(Tcl_Interp *interp)		/* Interpreter for application. */
 		cmd_ret = Tcl_Eval(interp,eval_exp);
 		if (cmd_ret != TCL_OK)
 		{
-			LOGGER((LOGFP,"Tcl Error: %s\n",interp->result));
+			LOGGER((LOGFP,"Tcl Error: %s\n",Tcl_GetStringResult(interp)));
 		}
 	}
 
